
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ MAP_ISPAGE ;
 scalar_t__ PAGE_SIZE ;
 int SIGSEGV ;
 int SIG_DFL ;
 unsigned int TOP_ADDR ;
 int next (unsigned int*,unsigned int) ;
 int prepare () ;
 int signal (int ,int ) ;
 unsigned int task_size ;
 scalar_t__ testaddr (unsigned int) ;

void map(unsigned * map)
{
unsigned addr = task_size;
unsigned bit = 1;
prepare();
while (addr < TOP_ADDR) {
if (testaddr(addr) == MAP_ISPAGE)
*map |= bit;
addr += PAGE_SIZE;
next(map, bit);
}
signal(SIGSEGV, SIG_DFL);
}
