; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_131.c_map.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_131.c_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@task_size = common dso_local global i32 0, align 4
@TOP_ADDR = common dso_local global i32 0, align 4
@MAP_ISPAGE = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8
@SIGSEGV = common dso_local global i32 0, align 4
@SIG_DFL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @map(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @task_size, align 4
  store i32 %5, i32* %3, align 4
  store i32 1, i32* %4, align 4
  %6 = call i32 (...) @prepare()
  br label %7

7:                                                ; preds = %21, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @TOP_ADDR, align 4
  %10 = icmp ult i32 %8, %9
  br i1 %10, label %11, label %30

11:                                               ; preds = %7
  %12 = load i32, i32* %3, align 4
  %13 = call i64 @testaddr(i32 %12)
  %14 = load i64, i64* @MAP_ISPAGE, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %11
  %17 = load i32, i32* %4, align 4
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %17
  store i32 %20, i32* %18, align 4
  br label %21

21:                                               ; preds = %16, %11
  %22 = load i64, i64* @PAGE_SIZE, align 8
  %23 = load i32, i32* %3, align 4
  %24 = zext i32 %23 to i64
  %25 = add nsw i64 %24, %22
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %3, align 4
  %27 = load i32*, i32** %2, align 8
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @next(i32* %27, i32 %28)
  br label %7

30:                                               ; preds = %7
  %31 = load i32, i32* @SIGSEGV, align 4
  %32 = load i32, i32* @SIG_DFL, align 4
  %33 = call i32 @signal(i32 %31, i32 %32)
  ret void
}

declare dso_local i32 @prepare(...) #1

declare dso_local i64 @testaddr(i32) #1

declare dso_local i32 @next(i32*, i32) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
